--- a/footballQuiz.html
+++ b/footballQuiz.html
@@ -6,68 +6,17 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Document</title>
 
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
  <!-- Link to Bootstrap CSS -->
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
  <!-- Link to Personal CSS -->
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container " id="div1" >
-<h1 id="heading1">Whatsapp number <i class="fa-brands fa-whatsapp"></i></h1><h4>
 
-<a href="https://wa.me//+917276380342">
-<i class="fa-brands fa-whatsapp"></i></h4>
-</a><h2><i class="fa-solid fa-arrow-up"></i> click here</h2>
-
-</div>
-<form class="container bg-danger my-5 text-center p-5 " id="form1">
-    <u>
-<h1>CONTACT US FORM</h1></u>
-<br><br>
-   
-</picture>
-Your name <input type="text" placeholder="Your Name ">
-<br><br>
-Your surname <input type="text" placeholder="Your last name/surname">
-<br><br>
-Your email  <input type="email" placeholder="Email">
-<br><br>
-password  <input type="password" placeholder="password">
-<br><br>
-password <input type="password" placeholder="confirm password">
+<h1>Football Quiz</h1>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</form>
 
 
 
